--- a/app/src/main/res/layout/post_row.xml
+++ b/app/src/main/res/layout/post_row.xml
@@ -46,10 +46,10 @@
 
             <TextView
                 android:id="@+id/feed_post_time_posted_text_view"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toEndOf="@+id/feed_post_profile_picture_image_view"
                 app:layout_constraintStart_toStartOf="@+id/feed_post_username_text_view"
                 app:layout_constraintTop_toBottomOf="@+id/feed_post_username_text_view"
                 tools:text="22 hours ago" />
@@ -176,6 +176,20 @@
                 app:layout_constraintTop_toTopOf="@+id/post_like_button"
                 app:layout_constraintVertical_bias="0.368"
                 tools:text="Like" />
+
+            <TextView
+                android:id="@+id/feed_post_location_text_view"
+                android:layout_width="0dp"
+                android:layout_height="22dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:drawablePadding="-3dp"
+                android:drawableStart="@drawable/ic_location"
+                android:gravity="left"
+                app:layout_constraintBaseline_toBaselineOf="@+id/feed_post_time_posted_text_view"
+                app:layout_constraintEnd_toStartOf="@+id/guideline2"
+                app:layout_constraintStart_toEndOf="@+id/feed_post_time_posted_text_view"
+                tools:text="Leeds" />
 
         </android.support.constraint.ConstraintLayout>
 
